--- a/web/index.html
+++ b/web/index.html
@@ -6,11 +6,15 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>RoomFinderService</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
     </head>
     <body>
-        <div>TODO write content</div>
+        <div>RoomFinderService wurde erfolgreich geladen.</div>
+        <div><a href="http://localhost:8080/RoomFinderService/webresources/application.wadl">WADL Dokument</a></div>
+        <div>Einfache Beispielanfrage:
+            <a href="http://localhost:8080/RoomFinderService/webresources/vacant_rooms?near=WH+C+579">
+                http://&LT;host+port&GT;/RoomFinderService/webresources/vacant_rooms?near=WH+C+579</a></div>
     </body>
 </html>
